k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-service
  namespace: clubhive
spec:
  selector:
    app: server
  ports:
  - port: 3000
    targetPort: 3000
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: client-service
  namespace: clubhive
spec:
  selector:
    app: client
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
