k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clubhive-ingress
  namespace: clubhive
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: traefik
  rules:
  - host: clubhiveprox.timothyw.dev
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: server-service
            port:
              number: 3000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client-service
            port:
              number: 80
